--- a/backend-demo/package.json
+++ b/backend-demo/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.0-beta3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase": "^8.4.1",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
