--- a/backend-demo/package.json
+++ b/backend-demo/package.json
@@ -13,11 +13,13 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.0.0-beta3",
     "concurrently": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^8.4.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
