--- a/backend-demo/package.json
+++ b/backend-demo/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.0.0-beta3",
     "concurrently": "^6.0.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^8.4.1",
