--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.0.0-beta3",
     "concurrently": "^6.0.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^8.4.1",
@@ -33,6 +34,7 @@
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
+
   },
   "scripts": {
     "dev": "concurrently \"npm run react\" \"npm run server\"",
