--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "dev": "concurrently \"npm run react\" \"npm run server\"",
     "react": "react-scripts start",
-    "server": "node server.js",
+    "server": "nodemon server.js",
     "start": "node ./server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
